Endpoint contrasena, obtener toda la informacion usuario, correcciones
